fixed css styling so content is not clipped by nav bar

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,6 @@
-header {
-  height: 400px;
+body > header {
+  height: 540px;
+  padding-top: 120px;
   width: 100%;
   display: flex;
   flex-direction: column;
